--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".activities.TabActivity">
+    tools:context=".activities.MenuTabActivity">
 
     <include layout="@layout/header"
         android:id="@+id/lHeader"
@@ -14,6 +14,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/frContainer"
         android:layout_below="@+id/lHeader"
         android:layout_above="@+id/llBottomMenu"
         >
@@ -34,7 +35,6 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:id="@+id/rlNews"
-            android:background=""
 
             >
             <ImageView
@@ -52,7 +52,6 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:id="@+id/rlProducts"
-            android:background=""
 
             >
             <ImageView
@@ -71,7 +70,6 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:id="@+id/rlDoctors"
-            android:background=""
 
             >
             <ImageView
@@ -89,7 +87,6 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:id="@+id/rlAppointments"
-            android:background=""
 
             >
             <ImageView
@@ -107,8 +104,6 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:id="@+id/rlPets"
-            android:background=""
-
             >
             <ImageView
                 android:layout_width="30dp"
@@ -125,8 +120,6 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:id="@+id/rlProfile"
-            android:background=""
-
             >
             <ImageView
                 android:layout_width="30dp"
