--- a/app/src/main/res/layout/activity_verify_code.xml
+++ b/app/src/main/res/layout/activity_verify_code.xml
@@ -79,5 +79,16 @@
                 android:textSize="17sp" />
         </LinearLayout>
     </ScrollView>
+    <RelativeLayout
+        android:id="@+id/rlProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true" />
+    </RelativeLayout>
 
 </RelativeLayout>
