--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,10 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     tools:context=".activities.MainMenuActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        >
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            card_view:cardCornerRadius="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:id="@+id/cvDoctor"
+            card_view:cardUseCompatPadding="true"
+            app:cardBackgroundColor="@android:color/white"
+            card_view:cardElevation="6dp"
+            >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="150dp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/rlparent"
+            android:background="@drawable/shape_news_background"
+            >
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_doctors"
+                android:layout_centerInParent="true"/>
+        </RelativeLayout>
+        </android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/tvDoctor"
+            android:layout_width="160dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/cvDoctor"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/bg_round_green"
+            android:gravity="center"
+            android:elevation="8dp"
+            android:layout_marginTop="-30dp"
+            android:text="Doctor"
+            android:textColor="@android:color/white"
+            android:textSize="17sp" />
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            card_view:cardCornerRadius="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_below="@+id/tvDoctor"
+            android:id="@+id/cvUser"
+            card_view:cardUseCompatPadding="true"
+            app:cardBackgroundColor="@android:color/white"
+            card_view:cardElevation="6dp"
+            >
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="150dp"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/shape_news_background"
+                >
+                <ImageView
+                    android:layout_width="150dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/ic_profile"
+                    android:layout_centerInParent="true"/>
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/tvUser"
+            android:layout_width="160dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/cvUser"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/bg_round_green"
+            android:gravity="center"
+            android:elevation="8dp"
+            android:layout_marginTop="-30dp"
+            android:text="Client"
+            android:textColor="@android:color/white"
+            android:textSize="17sp" />
+    </RelativeLayout>
+
+</RelativeLayout>
