--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.ProfileFragment">
@@ -10,12 +11,13 @@
         android:layout_centerInParent="true"
         >
 
-        <ImageView
+        <com.example.projetc2application.utils.CircleImageView
+            android:id="@+id/ivProfile"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:src="@drawable/ic_profile"
-            android:id="@+id/ivProfile"
-            />
+            app:civ_border_color="@color/colorGrey"
+            app:civ_border_width="1dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -51,6 +53,18 @@
             android:textSize="17sp" />
 
 
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rlProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerInParent="true" />
     </RelativeLayout>
 
 </RelativeLayout>
